See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.47.00

              Remove nstring.h from exported interfaces.

              Fix: remove inclusion of pm_c_util.h from sshopt.h, which is
              an exported interface header file, whereas pm_c_util.h is not.

09.03.29 BJH  Release 10.46.00

              xwdtopnm: Add -cmapdump .

              xwdtopnm: Change maxval calculation for truecolor to fit
              X11 spec.  Now it's determined by bits_per_rgb.

              xwdtopnm: Add warning about 2 byte sample output.
         
              pnmcrop: fast path for PBM.

              pnmcrop: Use border file instead of original image to determine
              the background color (i.e. the color of added margins).

              pnmscale: finally make it just an alias of pamscale, which
              obsoleted it in 10.20.
              
              pnmcut: finally make it just an alias of pamcut, which
              obsoleted it in 9.20.

              tifftopnm: fix orientation problem on big-endian machines.
              Introduced in 10.42.

              pnmcrop: various fixes.

              g3topbm: fix array bound violation.  Introduced in 10.32.

              pnmcat: fix array bound violation with PBM top/bottom
              concatenation.  Introduced in 10.44.

              ilbmtoppm: Fix array bound violation with compressed ILBM.
              Introduced in 10.18.

              fitstopnm: fix garbage output when input is little endian
              floating point FITS.

              picttoppm: Fix crash with -fullres and all-text PICT image.
              Also issue warning that program omits text with -fullres.

              picttoppm: Improve error/informational messages.

              picttoppm: Don't fail if 'fontdir' file doesn't exist.  Bug
              from 10.44.
