@@ -6,7 +6,12 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.47.00
 
+              Add pamsistoaglyph.  Thanks Scott Pakin.
+
               Remove nstring.h from exported interfaces.
+
+              pamstereogram: fix tuple type in output file (and crash
+              with -verbose) with -patfile .
 
               Fix: remove inclusion of pm_c_util.h from sshopt.h, which is
               an exported interface header file, whereas pm_c_util.h is not.
